--- a/_config.yml
+++ b/_config.yml
@@ -20,21 +20,21 @@ permalink: /:title/
 authors:
   kalani:
     name: Kalani
-    display_name: "Kalani Craig"
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    display_name: Kalani Craig
+    gravatar: e57d87c95ebbfcbb5f7e2ea93ae3c84e
     email: kalani@kalanicraig.com
     web: https://www.kalanicraig.com
     twitter: https://twitter.com/kalanicraig
     description: "Professor"
 
-  john:
-    name: John
-    display_name: John
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+  heather:
+    name: Heather
+    display_name: Heather Hoffmeyer
+    gravatar: 
+    email: 
+    web: 
+    twitter: 
+    description: "Heather"
 
 # Plugins
 plugins: 
