--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ authors:
     display_name: Kalani Craig
     gravatar: e57d87c95ebbfcbb5f7e2ea93ae3c84e
     email: kalani@kalanicraig.com
-    web: https://www.kalanicraig.com
+    web: http://www.kalanicraig.com
     twitter: https://twitter.com/kalanicraig
     description: "Professor"
 
