Revised item listings and initial story listings

--- a/_config.yml
+++ b/_config.yml
@@ -181,10 +181,8 @@ collections:
     permalink: /:collection/:path:output_ext
     itemid: true
     itemlabel: true
-
-stories:
-  items:
+  stories:
     output: true
     permalink: /:collection/:path:output_ext
-    storylabel: true
+    storyid: true
 
